--- a/renren-generator/src/main/resources/generator.properties
+++ b/renren-generator/src/main/resources/generator.properties
@@ -2,14 +2,14 @@
 
 mainPath=com.yanlaoge
 #\u5305\u540D
-package=com.yanlaoge.gulimall
-moduleName=ware
+package=com.yanlaoge.mall
+moduleName=member
 #\u4F5C\u8005
-author=rubyle
+author=ruby
 #Email
 email=besokuser@163.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
-tablePrefix=wms_
+tablePrefix=mall,ums
 
 #\u7C7B\u578B\u8F6C\u6362\uFF0C\u914D\u7F6E\u4FE1\u606F
 tinyint=Integer
@@ -31,9 +31,9 @@ mediumtext=String
 longtext=String
 
 
-date=Date
-datetime=Date
-timestamp=Date
+date=LocalDate
+datetime=LocalDateTime
+timestamp=LocalDateTime
 
 NUMBER=Integer
 INT=Integer
